# FaillessDB

./: .clang-format  .gitignore  .travis.yml  0001-added-compiler-and-new-patch-on-rocksdb.patch  0001-removed-flag-for-building-by-g-9.patch  CMakeLists.txt  LICENSE  README.md  failless.conf  failless_cli.cpp  failless_db.cpp  linux_pkg_install.sh
client/: CMakeLists.txt
client/llssclient/core/: client.cpp  client.h  client_interface.h
client/llssclient/filesystem/: filesystem.cpp  filesystem.h
client/llssclient/network/: mp_client.cpp  mp_client.h  mp_client_interface.h
client/llssclient/tests/: run_tests.cpp
db/: CMakeLists.txt  main.cpp
db/llssdb/auth/: authorization.cpp  authorization.h  disconnector.h  registration.cpp  registration.h  signin.cpp  signin.h
db/llssdb/engine/: server_manager.cpp  server_manager.h  task.cpp  task.h
db/llssdb/engine/Auth/: Authorization.h  CMakeLists.txt  Disconnector.h  Registration.h  SignIn.cpp  SignIn.h
db/llssdb/folder/: data_worker.cpp  data_worker.h  file_system.cpp  file_system.h  log_manager.cpp  log_manager.h  node.cpp  node.h  task.h  task_worker.cpp  task_worker.h
db/llssdb/network/: response.h  tcp_server.cpp  tcp_server.h  tcp_server_interface.h
db/llssdb/network/transfer/: request.cpp  request.h  response.cpp  response.h
db/llssdb/tests/: run_tests.cpp  tcp_server_mock.h  test_auth.h  test_data_worker.h  test_file_system.h  test_server.h  test_server_manager.h  test_task_worker.h  test_tcp_server.h
db/llssdb/tests/simple/: simple_client.cpp  simple_client.h
llss3p/: CMakeLists.txt
llss3p/enums/: operators.h
llss3p/serialization/: serializer.h  serializer_interface.h
llss3p/utils/: boost_logger.cpp  boost_logger.h  data.cpp  data.h  hasher.cpp  hasher.h  packet.h  queue.cpp  queue.h  str_switch.h
llsscli/: CMakeLists.txt
llsscli/config/: config.h
llsscli/core/: client.cpp  client.h  client_interface.h
llsscli/filesystem/: filesystem.cpp  filesystem.h  filesystem_interface.h
llsscli/network/: mp_client.cpp  mp_client.h  mp_client_interface.h  network_client.cpp  network_client.h  network_client_interface.h
llsscli/serialization/: serializer.cpp  serializer.h  serializer_interface.h
llsscli/utils/: str_switch.h
llssdb/: CMakeLists.txt
llssdb/auth/: authorization.cpp  authorization.h  iauthorization.h  registration.cpp  registration.h  signin.cpp  signin.h  user_info.h  users.llssdb
llssdb/common/: operators.h  queue.cpp  queue.h  settings.h  task.cpp  task.h
llssdb/config/: configmanager.cpp  configmanager.h  settings.h
llssdb/engine/: folder_gen.cpp  folder_gen.h  manager_interface.h  server_manager.cpp  server_manager.h  task.cpp  task.h
llssdb/folder/: data_worker.cpp  data_worker.h  file_system.cpp  file_system.h  file_system_interface.h  in_memory_data.h  log_manager.h  node.cpp  node.h  task.h  task_worker.cpp  task_worker.h  task_worker_interface.h  value_info.h  worker_interface.h
llssdb/network/: connection.cpp  connection.h  tcp_server.cpp  tcp_server.h  tcp_server_interface.h
llssdb/network/transfer/: adapter.h  connection.cpp  connection.h  hookup.cpp  hookup.h  request.cpp  request.h  response.cpp  response.h
llssdb/utils/: cache.cpp  cache.h  config_manager.cpp  config_manager.h  settings.h  signal_handler.cpp  signal_handler.h  task.cpp  task.h
tests/tests_cli/: run_tests.cpp  serialization_tests.h  test_serializer_unit.h
tests/tests_cli/serialization/: test_client_serializer_integration.h  test_serializer_mock.h  test_serializer_unit.h
tests/tests_db/: mocks.h  run_tests.cpp  tcp_server_mock.h  test_auth.h  test_config.h  test_file_system.h  test_lockfree_queue.h  test_server.h  test_server_manager.h  test_task_worker.h  test_tcp_server.h
tests/tests_db/simple/: simple_client.cpp  simple_client.h
